<resources>
    <string name="app_name">Summer Tango Camp Kolasin</string>
    <string name="parse_app_id" translatable="false">oKdNuwsJ7f05WHYZx98zcE5BEif1DB2TvIq7gTTE</string>
    <string name="parse_client_key" translatable="false">fhNRoBH1q0o5SnVnFfkZkwaNvtgv33FY4riwObno</string>
    <string name="notifications">Notifications</string>
    <string name="camp_guide">Camp Guide</string>
    <string name="food">Food</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="transport">Transportation</string>
    <string name="accommodation">Accommodation</string>
    <string name="activities">Activities</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_tab" translatable="false">MainTabActivity</string>
    <string name="transport_guide_html">
<![CDATA[
<p class="P7"><span class="T1">BUS TIME TABLE</span></p><p class="P2"> </p><p class="Standard"><span class="T3">Bus  Station  Kolašin</span></p><p class="Standard"><span class="T3">Tel. + 382 ( 0 ) 20  864- 033</span></p><p class="P3"> </p><p class="P3">Beograd – Kolasin</p><p class="P3"> </p><p class="P3">7:00, 8:30, 12:30, 18:45, 19:00, 21:00</p><p class="P3"> </p><p class="P3">Kolašin – Mojkovac    ( Nacionalni park Biogradska gora ) </p><p class="P3">8:15,  8:20,  9:45,  10:30,  12:50 , 14:30,  15:40 , 16:50,  18:30</p><p class="P3"> </p><p class="P3">                                 </p><p class="P3">Kolašin - Bijelo Polje</p><p class="P3">8:30,  14:30</p><p class="P3">  </p><p class="P3">Kolašin - Berane</p><p class="P3">9:45,  10:30 , 14:30,  15:40, 16:50,  18:30</p><p class="P3"> </p><p class="P3">Kolašin - Andrijevica</p><p class="P3">9:45,  10:30,  14:45 , 16:50,  18:30</p><p class="P3"> </p><p class="P3">Kolašin  - Beograd</p><p class="P3">     12:20 </p><p class="P3"> </p><p class="P3">Kolašin - Podgorica</p><p class="P3">6:00, 8:00, 8:30, 9:40, 10:30, 11:00, 11:45, 12:45, 13:20, 14:10, 14:10, 14:50, 15:50, 16:30, 18:15</p><p class="P3"> </p><p class="P3">Kolašin - Pljevlja</p><p class="P3">8:45 , 12:45,  16:00</p><p class="P3"> </p><p class="P3">Kolašin  - Plav </p><p class="P3">9:40,  14:40,  16:50,  18:30</p><p class="P3"> </p><p class="P3">Kolašin - Bar     </p><p class="P3">6:00    </p><p class="P3"> </p><p class="P3">Kolašin-Budva</p><p class="P3">8:00, 14:10, 15:50, 16:30</p><p class="P3"> </p><p class="P3">Kolašin - Herceg Novi</p><p class="P3">8:00,  15:50,  16:30</p><p class="P3"> </p><p class="P3"> </p><p class="P3">                                             </p><p class="Standard"><span class="T2"> </span><span class="T3">Vozni red  – Railway station - Timetable</span></p><p class="P4">                                                TEL: + 382 ( 0 ) 441-492</p><p class="P5">VREME DOLAZKA  VOZOVA  U STANICU KOLAŠIN</p><p class="P1">Time of arrivals in Kolasin:</p><p class="P3">                                       </p><p class="P6">7:55                   BAR – BIJELO POLJE</p><p class="P6">8:20                   SUBOTICA – BAR</p><p class="P6">9:50                   BIJELO POLJE – BAR</p><p class="P6">11:20                 BAR – BEOGRAD</p><p class="P6">17:20                 BAR – BIJELO POLJE</p><p class="P5">18:05                 BEOGRAD (9:10) – BAR</p><p class="P5">05:03                 BEOGRAD (20:10) - BAR</p><p class="P6">19:25                 BIJELO POLJE – BAR</p><p class="P6">19:25                 BAR - SUBOTICA</p><p class="P6"> </p><p class="P3"> </p> <p class="P3"><span class="T1">TAXI SERVICE</span></p><p class="P1"/><p class="P2"><span class="T2">Mico Bulatovic              +38267 594 547</span></p><p class="P2">Bojić Rade                +382.69.548.488</p><p class="P2">Vlahović Veselin     +382.69.033.940</p><p class="P2">Vlahović Dragan     +382.69.662.244</p><p class="P2">Grujić Grujica          +382.67.508.935</p><p class="P2">Dožić Zoran             +382.67.537.738</p><p class="P2">Ivković Mladen       +382.67.537.784</p><p class="P2">Janković Manojle  +382.69.645.040</p><p class="P2">Rakočević Boro      +382.69.247.404</p><p class="P2">Radović Nebojša    +382.69.065.848</p><p class="P2">Čobeljić Velizar      +382.69.456.899</p><p class="P2">Šuković Vlado         +382.69.552.887</p><p class="P2"><span class="T2">Vlado Vlahović     +38267401421</span></p><p class="P2">Šuković Radojica    +382.69.464.104</p><p class="P2">Udruženje/Association Slava Lux: 19501</p>
]]>
</string>
    <string name="fb_links_text">Official facebook event https://www.facebook.com/events/102048893462130/ \n
        \nFacebook group dedicated to the event: https://www.facebook.com/groups/215228388600063/, \n
\nSummer tango camp facebook page: https://www.facebook.com/summertangocamp?fref=ts</string>
    <string name="about_app">About application</string>
    <string name="facebook_links">Facebook links: </string>
    <string name="tn_mail">Tango Natural contact info: </string>
    <string name="tn_info">Our e-mail is: tangonaturalmontenegro@gmail.com , and if you’d prefer to contact us by phone, you can reach us on:\n

\nDarko Dožić - \n+381 63 342 155\n+382 68 171 628\n
\nDuško Raketić - +382 68 644 499\n

\nwww.summertangocamp.com
\nwww.tangonatural.com
 </string>
    <string name="app_version">App version: </string>
    <string name="app_info">App developer:  Stevan Bogosavljević \n \nContact email: stevanbogosavljevic@gmail.com </string>
</resources>