<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.montecode.app.summertangocamp.kolasin.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/fb_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/fb" />

                <TextView
                    android:id="@+id/fb_links_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/facebook_links" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:padding="10dp"
                android:text="@string/fb_links_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/mail_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/mail" />

                <TextView
                    android:id="@+id/tn_info_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/tn_mail" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:padding="10dp"
                android:text="@string/tn_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/about_app_img_view"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/about_app_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/about_app" />

            </LinearLayout>

            <TextView
                android:id="@+id/app_version_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/app_version" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/app_info" />

            <com.github.siyamed.shapeimageview.CircularImageView
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/stevan"
                app:siBorderColor="@color/accent"
                app:siBorderWidth="2dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
